# MCTT

./: .gitignore  LICENSE  NOTICE  README.md
MCTT-Translator/: build.sbt
MCTT-Translator/project/: plugins.sbt
MCTT-Translator/src/main/scala/gui/: MainWindow.scala
MCTT-Translator/src/main/scala/mctt/: Parser.scala  Translator.scala  Tree.scala
MCTT-Translator/src/test/resources/: mapping.txt
MCTT-Translator/src/test/resources/test1/: md.scxml  mw.scxml  system.scxml
MCTT-Translator/src/test/resources/test10/: md.scxml  mw.scxml  system.scxml
MCTT-Translator/src/test/resources/test11/: md.scxml  mw.scxml  system.scxml
MCTT-Translator/src/test/resources/test12/: md.scxml  mw.scxml  system.scxml
MCTT-Translator/src/test/resources/test13/: md.scxml  mw.scxml  system.scxml
MCTT-Translator/src/test/resources/test14/: mc.scxml  md.scxml  mw.scxml  system.scxml
MCTT-Translator/src/test/resources/test15/: mc.scxml  md.scxml  mw.scxml  system.scxml
Samples/scenario1/: MW.qml  MWModel.qml  MWProxy.qml  SP.qml  SPModel.qml  SPProxy.qml  mapping_scenario1.txt  mw.scxml  scenario1_mctt.txt  sp.scxml  system.scxml
Samples/scenario2/: RC.qml  RCModel.qml  RCProxy.qml  SP.qml  SPModel.qml  SPProxy.qml  TV.qml  TVModel.qml  TVProxy.qml  mapping_scenario2.txt  rc.scxml  scenario2_mctt.txt  sp.scxml  system.scxml  tv.scxml
Simulation-Environment/MCTTBroadcastServer/: CMakeLists.txt  broadcastserver.cpp  broadcastserver.h  main.cpp
Simulation-Environment/MCTTClient/: CMakeLists.txt  main.cpp  networkworker.cpp  networkworker.h  proxy.cpp  proxy.h
(+55 files in other folders)
